# mindkeeper

./: .gitignore  .replit  README.md  mindkeeper-db.db  pyproject.toml  terminalizer.yml
mindkeeper/: __init__.py  contacts.py  controller.py  model.py  notes.py  parser.py  repl.py  repo.py  utils.py
recordings/: contacts-add.yml  contacts-delete.yml  contacts-edit.yml  contacts-greetings.yml  contacts-list.yml  contacts-show.yml  help.yml  notes-add.yml  notes-delete.yml  notes-edit.yml  notes-list.yml  notes-show.yml
