[tool.poetry]
name = "mindkeeper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
mindkeeper = "mindkeeper:run"

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0.47"
pydantic = {extras = ["email"], version = "^2.8.2"}
rich = "^13.7.1"
annotated-types = "^0.7.0"
thefuzz = "^0.22.1"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
